--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,23 +2,27 @@ pipeline {
     agent any
 
     stages {
-       
+        stage('Checkout') {
+            steps {
+                git url: 'https://github.com/arouedkhelifi/test.git'
+            }
+        }
 
         stage('Install dependencies') {
             steps {
-                bat 'npm install'
+                sh 'npm install'
             }
         }
 
         stage('Tests') {
             steps {
-                bat 'npm test'
+                sh 'npm test'
             }
         }
 
         stage('Build Docker') {
             steps {
-                bat 'docker build -t todo-app .'
+                sh 'docker build -t todo-app .'
             }
         }
     }
